# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("examples") {
  testonly = true

  deps = [
    "//mojo/examples/echo",
    "//mojo/examples/hello_content_handler",
    "//mojo/examples/hello_mojo",
    "//mojo/examples/tiny",
  ]
}
