# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("system") {
  output_name = "mojo"

  # TODO(abarth): Move this into //build
  include_dirs = [
    "//",
  ]

  sources = [
    "mojo.c",
  ]
}
