# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("impl") {
  sources = [
    "mojo.c",
  ]

  deps = [
    "//mojo/public/c:system",
  ]

  cflags = [ "-Werror", "-Wsign-conversion" ]
}

static_library("system") {
  output_name = "mojo"

  sources = [
    "main.c",
  ]

  deps = [
    ":impl",
    "//mojo/public/c:system",
  ]
}
