# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("test") {
  testonly = true

  deps = [
    ":mojo_public_c_bindings_unittests",
    ":mojo_public_c_system_unittests",
    ":mojo_public_cpp_bindings_perftests",
    ":mojo_public_cpp_bindings_unittests",
  ]
}

source_set("test_support") {
  testonly = true

  sources = [
    "test_support.cc",
  ]

  deps = [
    "//mojo/public/cpp/test_support",
  ]
}

executable("mojo_public_c_bindings_unittests") {
  testonly = true

  sources = [
    "run_all_unittests.cc",
  ]

  deps = [
    "//mojo/public/c/bindings/tests",
    "//mojo/system",
    "//third_party/gtest",
  ]
}

executable("mojo_public_c_system_unittests") {
  testonly = true

  sources = [
    "run_all_unittests.cc",
  ]

  deps = [
    "//mojo/public/c/system/tests",
    "//mojo/system",
    "//third_party/gtest",
  ]
}

executable("mojo_public_cpp_bindings_perftests") {
  testonly = true

  sources = [
    "run_all_unittests.cc",
  ]

  deps = [
    ":test_support",
    "//mojo/public/cpp/bindings/tests:perftests",
    "//mojo/system",
    "//third_party/gtest",
  ]
}

executable("mojo_public_cpp_bindings_unittests") {
  testonly = true

  sources = [
    "run_all_unittests.cc",
  ]

  deps = [
    ":test_support",
    "//mojo/public/cpp/bindings/tests",
    "//mojo/system",
    "//third_party/gtest",
  ]
}
