# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/tools/bindings/mojom.gni")

group("echo") {
  deps = [
    #    ":benchmark",
    ":client",
    ":client_sync",
    ":server",
  ]
}

executable("client") {
  output_name = "echo_client"

  deps = [
    ":bindings",
    "//mojo/public/cpp/application:standalone",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/utility",
    "//mojo/system",
  ]

  sources = [
    "echo_client.cc",
  ]
}

executable("client_sync") {
  output_name = "echo_client_sync"

  deps = [
    ":bindings",
    ":bindings_sync",
    "//mojo/public/cpp/application:standalone",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/utility",
    "//mojo/system",
  ]

  sources = [
    "echo_client_sync.cc",
  ]
}

executable("server") {
  output_name = "echo_server"

  deps = [
    ":bindings",
    "//mojo/public/cpp/application:standalone",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/utility",
    "//mojo/system",
  ]

  sources = [
    "echo_server.cc",
  ]
}

mojom("bindings") {
  sources = [
    "echo.mojom",
  ]
}

# TODO: Re-enable benchmark app.
if (false) {
  executable("benchmark") {
    output_name = "echo_benchmark"

    deps = [
      ":bindings",
      "//base",
      "//mojo/application:application",
      "//mojo/common:tracing_impl",
      "//mojo/public/cpp/application",
      "//mojo/public/cpp/bindings",
      "//mojo/public/cpp/utility",
    ]

    sources = [
      "echo_benchmark.cc",
    ]
  }
}
