# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("hello_content_handler") {
  deps = [
    ":hello_content",
    "//mojo/public/c:system",
    "//mojo/public/cpp/application:standalone",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/system",
    "//mojo/public/cpp/utility",
    "//mojo/public/interfaces/network",
    "//mojo/services/content_handler/interfaces",
    "//mojo/system",
  ]

  sources = [
    "hello_content_handler.cc",
  ]
}

copy("hello_content") {
  sources = [ "hello_content" ]
  outputs = [ "$root_out_dir/{{source_file_part}}" ]
}
