# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/tools/bindings/mojom.gni")

group("hello_mojo") {
  deps = [
    ":hello_mojo_client",
    ":hello_mojo_server",
  ]
}

executable("hello_mojo_client") {
  deps = [
    ":hello_mojo_interface",
    "//mojo/public/c:system",
    "//mojo/public/cpp/application:standalone",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/system",
    "//mojo/public/cpp/utility",
    "//mojo/system",
  ]

  sources = [
    "hello_mojo_client.cc",
  ]
}

executable("hello_mojo_server") {
  deps = [
    ":hello_mojo_interface",
    "//mojo/public/c:system",
    "//mojo/public/cpp/application:standalone",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/system",
    "//mojo/public/cpp/utility",
    "//mojo/system",
  ]

  sources = [
    "hello_mojo_server.cc",
  ]
}

mojom("hello_mojo_interface") {
  sources = [
    "hello_mojo.mojom",
  ]
}
