# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("shapes") {
  deps = [
    "//mojo/public/c/system",
    "//mojo/public/cpp/application:standalone",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/system",
    "//mojo/public/cpp/utility",
    "//mojo/services/framebuffer/interfaces",
    "//mojo/system",
    "//third_party/skia",
  ]

  sources = [
    "shapes.cc",
  ]
}
