# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../mojo_sdk.gni")

mojo_sdk_source_set("bindings") {
  sources = [
    "array.h",
    "buffer.h",
    "interface.h",
    "map.h",
    "message.h",
    "string.h",
    "struct.h",
    "union.h",
    "validation.h",

    # Implementation details.
    "lib/array.c",
    "lib/buffer.c",
    "lib/map.c",
    "lib/message.c",
    "lib/struct.c",
    "lib/type_descriptor.c",
    "lib/type_descriptor.h",
    "lib/union.c",
    "lib/util.h",
  ]

  mojo_sdk_deps = [ "mojo/public/c/system" ]
}
