# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../mojo_sdk.gni")

mojo_sdk_source_set("mojo_internal_impl") {
  sources = [
    "dart_handle_watcher.cc",
    "dart_handle_watcher.h",
    "mojo_natives.cc",
    "mojo_natives.h",
  ]

  deps = [
    "//dart/runtime:libdart",
  ]

  mojo_sdk_public_deps = [
    "mojo/public/c:system",
    "mojo/public/cpp/environment",
    "mojo/public/cpp/system",
  ]
}
