# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../mojo_sdk.gni")

mojo_sdk_source_set("mojo_irt_header") {
  sources = [
    "mgl_irt.h",
    "mojo_initial_handle.h",
    "mojo_irt.h",
  ]
  mojo_sdk_public_deps = [
    "mojo/public/c:MGL",
    "mojo/public/c:MGL_onscreen",
    "mojo/public/c:MGL_signal_sync_point",
    "mojo/public/c:system",
  ]
}
