# Copyright 2016 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/tools/bindings/mojom.gni")

mojom("interfaces") {
  sources = [
    "framebuffer.mojom",
  ]

  public_deps = [
    "//mojo/services/geometry/interfaces",
  ]
}
