# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/tools/bindings/mojom.gni")

mojom("interfaces") {
  sources = [
    "entry.mojom",
    "log.mojom",
  ]

  import_dirs = [ get_path_info("../../", "abspath") ]
}
