# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/tools/bindings/mojom.gni")

mojom("interfaces") {
  sources = [
    "trace_provider_registry.mojom",
    "tracing.mojom",
  ]

  import_dirs = [ get_path_info("../../", "abspath") ]
}
