# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../../mojo_sdk.gni")

mojo_sdk_source_set("tests") {
  testonly = true

  sources = [
    "array_unittest.cc",
    "buffer_unittest.cc",
    "message_unittest.cc",
    "struct_unittest.cc",
    "union_unittest.cc",
  ]

  deps = [
    "//testing/gtest",
  ]

  mojo_sdk_deps = [
    "mojo/public/cpp/bindings/tests:mojo_public_bindings_test_utils",
    "mojo/public/cpp/system",
    "mojo/public/c/bindings",

    # The "_c" suffix'd target compiles the generated C bindings to this mojom
    # target.
    "mojo/public/interfaces/bindings/tests:test_interfaces_c",
  ]
}
