# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../../mojo_sdk.gni")

mojo_sdk_source_set("perftest_helpers") {
  testonly = true

  sources = [
    "async_waiter_perftest_helpers.cc",
    "async_waiter_perftest_helpers.h",
  ]

  mojo_sdk_deps = [
    "mojo/public/c/environment",
    "mojo/public/c/system",
    "mojo/public/cpp/system",
  ]
}
