# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../../mojo_sdk.gni")

mojo_sdk_source_set("tests") {
  testonly = true

  sources = [
    "buffer_unittest.cc",
    "data_pipe_unittest.cc",
    "handle_unittest.cc",
    "macros_unittest.cc",
    "message_pipe_unittest.cc",
    "time_unittest.cc",
    "wait_unittest.cc",
  ]

  deps = [
    "//testing/gtest",
  ]

  mojo_sdk_deps = [ "mojo/public/cpp/system" ]
}
