# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/mojo_sdk.gni")

mojo_sdk_source_set("cpp") {
  restrict_external_deps = false
  public_configs = [ "../../../public/build/config:mojo_services" ]
  sources = [
    "formatting.cc",
    "formatting.h",
    "frame_tracker.cc",
    "frame_tracker.h",
  ]

  deps = [
    "../../../geometry/cpp",
    "../interfaces",
  ]
}
